[tool.poetry]
name = "ladder_archiver"
version = "0.1.0"
description = ""
authors = ["Snapper <learningwithsnapper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
